Widgets Page: Prevent Menu Search Overlap on Mobile

--- a/admin/admin.less
+++ b/admin/admin.less
@@ -58,6 +58,12 @@
 			bottom: -35px;
 			right: 19px;
 
+			@media (max-width: 505px) {
+				margin-top: 5px;
+				position: static;
+				text-align: center;
+			}
+
 			input{
 				box-sizing: border-box;
 				width: 200px;
